adding search form

--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -14,7 +14,7 @@
 	  <li {% print str_active|safe if bpage2 %}><a href="/page2">Page 2</a></li>
 	  <li {% print str_active|safe if bpage3 %}><a href="/page3">Page 3</a></li>
 	  <li {% print str_active|safe if bpage4 %}><a href="/page4">Page 4</a></li>
-	  <li {% print str_active|safe if bpage4 %}><a href="/search">Search</a></li>
+	  <li {% print str_active|safe if bsearch %}><a href="/search">Search</a></li>
         </ul>
       </div>
     </div>
