add crawler and docMapping entity

--- a/templates/search.html
+++ b/templates/search.html
@@ -16,6 +16,7 @@
       <!-- Submit -->
       <div class="form-actions">
 	<button type="submit" class="btn btn-primary" name="inputSubmitSearch" value="1">Search</button>
+	<button type="submit" class="btn btn-primary" name="inputSubmitCrawl" value="1">Crawl</button>
       </div>
     </form>
   </div><!-- /span7 offset2 -->
