nav bar changes

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
     </div>
     <div id="footer">
       <div class="container">
-        <p class="muted credit pull-right">Content &copy; 2013 Santiago Arias | <a rel="author" href="https://profiles.google.com/santiago.ariassar">G+</a> | <a href="https://github.com/santiaago">GitHub</a> |  <a href="https://www.facebook.com/santiago.ariassar">Facebook</a> | <a href="http://www.linkedin.com/in/sanarias/en">LinkedIn</a> | <a href="https://twitter.com/santiago_arias">Twitter</a><br>
+        <p class="muted credit pull-right">Content &copy; 2013 <a href="www.sanarias.com">Santiago Arias</a> | <a rel="author" href="https://profiles.google.com/santiago.ariassar">G+</a> | <a href="https://github.com/santiaago">GitHub</a> |  <a href="https://www.facebook.com/santiago.ariassar">Facebook</a> | <a href="http://www.linkedin.com/in/sanarias/en">LinkedIn</a> | <a href="https://twitter.com/santiago_arias">Twitter</a><br>
 	</p>
       </div>
     </div>
