--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -6,10 +6,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="brand" href="/">Web search in GAE <small>by Santiago Arias</small></a>
+      <a class="brand" href="/">Web search in GAE</a>
       <div class="nav-collapse collapse">
         <ul class="nav">
-	  <li {% print str_active|safe if bhome %}><a href="/">Home</a></li>
 	  <li {% print str_active|safe if bpage1 %}><a href="/page1">Page 1</a></li>
 	  <li {% print str_active|safe if bpage2 %}><a href="/page2">Page 2</a></li>
 	  <li {% print str_active|safe if bpage3 %}><a href="/page3">Page 3</a></li>
